--- a/test.html
+++ b/test.html
@@ -1,63 +1,118 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gmap Web component</title>
-    <script async src="https://maps.googleapis.com/maps/api/js?key=YOOUR_API_KEY&language=it&loading=async"></script>
-    <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
 
-    <script type="module" src="/src/components/wc-gmap.ts"></script>
-    <script type="module" src="/src/components/wc-advmarker.ts"></script>
-    <script type="module" src="/src/components/wc-infowindow.ts"></script>
-    <script type="module" src="/src/components/wc-markerclusterer.ts"></script>
-  </head>
-  <body>
-    <wc-gmap 
-      id="mappa_test"
-      lat="45.5925512"
-      lng="12.5566951"
-      zoom="4"
-      stylemapid="82dd7744e7dc572b"
-      autopanfit
-      pinCustom
-      mapHeight="98vh"
-      >
-      <wc-advmarker lat="45.5925512" lng="12.5566951" pinCustom pinScale="1.4">
-        <wc-infowindow><p style="color:red">test</p></wc-infowindow>
-      </wc-advmarker>
-      <wc-advmarker lat="43.5925512" lng="11.5566951">
-        <wc-infowindow><p>test 2</p></wc-infowindow>
-      </wc-advmarker>
-      <wc-advmarker lat="44.5525512" lng="10.5566951">
-        <wc-infowindow><p>test 2</p></wc-infowindow>
-      </wc-advmarker>
-      <wc-advmarker lat="45.425512" lng="12.5566951">
-        <wc-infowindow><p style="color:red">test</p></wc-infowindow>
-      </wc-advmarker>
-      <wc-advmarker lat="43.125512" lng="11.5566951">
-        <wc-infowindow><p>test 2</p></wc-infowindow>
-      </wc-advmarker>
-      <wc-advmarker lat="44.6525512" lng="10.5566951">
-        <wc-infowindow><p>test 2</p></wc-infowindow>
-      </wc-advmarker>
-      <wc-advmarker lat="45.5925512" lng="11.5566951">
-        <wc-infowindow><p style="color:red">test</p></wc-infowindow>
-      </wc-advmarker>
-      <wc-advmarker lat="43.5925512" lng="19.5566951">
-        <wc-infowindow><p>test 2</p></wc-infowindow>
-      </wc-advmarker>
-      <wc-advmarker lat="44.5925512" lng="17.5566951">
-        <wc-infowindow><p>test 2</p></wc-infowindow>
-      </wc-advmarker>
-      <wc-advmarker lat="48.5925512" lng="19.5566951">
-        <wc-infowindow><p>test 2</p></wc-infowindow>
-      </wc-advmarker>
-      <wc-advmarker lat="55.5925512" lng="17.5566951">
-        <wc-infowindow><p>test 2</p></wc-infowindow>
-      </wc-advmarker>
-      <wc-markerclusterer pinCustom pinScale="1.4" pinBorderColor="#FF5500"></wc-markerclusterer>
-    </wc-gmap>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gmap Web component</title>
+  <script async src="https://maps.googleapis.com/maps/api/js?key=YOOUR_API_KEY&language=it&loading=async"></script>
+  <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
+
+  <script type="module" src="/src/components/wc-gmap.ts"></script>
+  <script type="module" src="/src/components/wc-advmarker.ts"></script>
+  <script type="module" src="/src/components/wc-infowindow.ts"></script>
+  <script type="module" src="/src/components/wc-markerclusterer.ts"></script>
+</head>
+
+<body>
+
+  <wc-gmap id="mappa_test" lat="45.5925512" lng="12.5566951" zoom="4" stylemapid="82dd7744e7dc572b" mapHeight="98vh"
+    autopanfit pinCustom>
+    <style>
+      .pin-tag {
+        background-color: #4285F4;
+        border-radius: 8px;
+        color: #FFFFFF;
+        font-size: 14px;
+        padding: 10px 15px;
+        position: relative;
+      }
+
+      .pin-tag::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 100%;
+        transform: translate(-50%, 0);
+        width: 0;
+        height: 0;
+        border-left: 8px solid transparent;
+        border-right: 8px solid transparent;
+        border-top: 8px solid #4285F4;
+      }
+    </style>
+    <wc-pinhtml>
+      <div>Html Pin map</div>
+    </wc-pinhtml>
+    <wc-advmarker lat="45.5925512" lng="12.5566951" pinCustom>
+      <wc-infowindow>
+        <p style="color:red">test</p>
+      </wc-infowindow>
+      <wc-pinhtml>
+        <div>Html Pin Marker</div>
+      </wc-pinhtml>
+    </wc-advmarker>
+    <wc-advmarker lat="45.5925512" lng="16.5566951" pinCustom>
+      <wc-infowindow>
+        <p style="color:red">test</p>
+      </wc-infowindow>
+      <wc-pinhtml>
+        <div>Html Pin Marker</div>
+      </wc-pinhtml>
+    </wc-advmarker>
+    <wc-advmarker lat="43.5925512" lng="11.5566951" pinCustom>
+      <wc-infowindow>
+        <p>test 2</p>
+      </wc-infowindow>
+    </wc-advmarker>
+    <wc-advmarker lat="44.5525512" lng="10.5566951" pinCustom>
+      <wc-infowindow>
+        <p>test 2</p>
+      </wc-infowindow>
+    </wc-advmarker>
+    <wc-advmarker lat="45.425512" lng="12.5566951" pinCustom>
+      <wc-infowindow>
+        <p style="color:red">test</p>
+      </wc-infowindow>
+    </wc-advmarker>
+    <wc-advmarker lat="43.125512" lng="11.5566951" pinCustom>
+      <wc-infowindow>
+        <p>test 2</p>
+      </wc-infowindow>
+    </wc-advmarker>
+    <wc-advmarker lat="44.6525512" lng="10.5566951" pinCustom>
+      <wc-infowindow>
+        <p>test 2</p>
+      </wc-infowindow>
+    </wc-advmarker>
+    <wc-advmarker lat="45.5925512" lng="11.5566951" pinCustom>
+      <wc-infowindow>
+        <p style="color:red">test</p>
+      </wc-infowindow>
+    </wc-advmarker>
+    <wc-advmarker lat="43.5925512" lng="19.5566951" pinCustom>
+      <wc-infowindow>
+        <p>test 2</p>
+      </wc-infowindow>
+    </wc-advmarker>
+    <wc-advmarker lat="44.5925512" lng="17.5566951" pinCustom>
+      <wc-infowindow>
+        <p>test 2</p>
+      </wc-infowindow>
+    </wc-advmarker>
+    <wc-advmarker lat="48.5925512" lng="19.5566951">
+      <wc-infowindow>
+        <p>test 2</p>
+      </wc-infowindow>
+    </wc-advmarker>
+    <wc-advmarker lat="55.5925512" lng="17.5566951">
+      <wc-infowindow>
+        <p>test 2</p>
+      </wc-infowindow>
+    </wc-advmarker>
+    <wc-markerclusterer pinCustom pinScale="1.4" pinBorderColor="#FF5500"></wc-markerclusterer>
+  </wc-gmap>
+</body>
+
 </html>
