--- a/test.html
+++ b/test.html
@@ -12,10 +12,20 @@
     <script type="module" src="/src/components/wc-pinhtml.ts"></script>
   </head>
   <body>
-    <wc-gmap apikey="" id="mappa_test" lat="45.5925512" lng="12.5566951" zoom="4" stylemapid="82dd7744e7dc572b" mapHeight="98vh" autopanfit pinCustom>
+    <wc-gmap apikey="AIzaSyCFpNmFYqSIY0IXMouUVG7aI5ZZbatr_p0" id="mappa_test" lat="45.5925512" lng="12.5566951" zoom="4" stylemapid="82dd7744e7dc572b" mapHeight="98vh" autopanfit pinCustom>
       <style>
         .pin-tag {background-color: #4285F4; border-radius: 8px; color: #FFFFFF; font-size: 14px; padding: 10px 15px; position: relative; }
         .pin-tag::after { content: ""; position: absolute; left: 50%; top: 100%; transform: translate(-50%, 0); width: 0; height: 0; border-left: 8px solid transparent; border-right: 8px solid transparent; border-top: 8px solid #4285F4; }
+        @keyframes drop {
+            0% { transform: translateY(-200px) scaleY(0.9); opacity: 0; }
+            50% { transform: translateY(0px) scaleY(1); opacity: 0.7; }
+            65% { transform: translateY(-17px) scaleY(0.9); opacity: 1; }
+            75% { transform: translateY(-22px) scaleY(0.9); opacity: 1; }
+            100% { transform: translateY(0px) scaleY(1); opacity: 1; }
+        }
+        .pin-drop {
+            animation: drop 0.8s ease;
+        }
       </style>
       <wc-pinhtml><div>Html Pin map</div></wc-pinhtml>
       <wc-advmarker lat="45.5925512" lng="12.5566951" pinCustom>
