add property markerDalay in wc-gmap

--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
     <script type="module" src="/src/components/wc-pinhtml.ts"></script>
   </head>
   <body>
-    <wc-gmap apikey="AIzaSyCFpNmFYqSIY0IXMouUVG7aI5ZZbatr_p0" id="mappa_test" lat="45.5925512" lng="12.5566951" zoom="4" stylemapid="82dd7744e7dc572b" mapHeight="98vh" autopanfit pinCustom>
+    <wc-gmap apikey="" id="mappa_test" lat="45.5925512" lng="12.5566951" zoom="4" stylemapid="82dd7744e7dc572b" mapHeight="98vh" markerDelay="50" autopanfit pinCustom>
       <style>
         .pin-tag {background-color: #4285F4; border-radius: 8px; color: #FFFFFF; font-size: 14px; padding: 10px 15px; position: relative; }
         .pin-tag::after { content: ""; position: absolute; left: 50%; top: 100%; transform: translate(-50%, 0); width: 0; height: 0; border-left: 8px solid transparent; border-right: 8px solid transparent; border-top: 8px solid #4285F4; }
